# khinsider_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  khinsider_bot.py  nginx.conf  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  full.yaml
khinsider_bot/: __main__.py  asgi.py  bot.py  config.py  constants.py  core.py  decorators.py  enums.py  util.py
