[project]
name = "khinsider_bot"
version = "0.2.4.dev1"
description = "Telegram bot to download soundtracks"
authors = [{ name = "NovaHFly", email = "mugiviska@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "starlette>=0.46.2,<0.47",
    "uvicorn>=0.34.2,<0.35",
    "aiogram>=3.20.0.post0,<4",
    "khinsider-downloader",
]

[tool.uv]

[tool.uv.sources]
khinsider-downloader = { git = "https://github.com/NovaHFly/khinsider_downloader", rev = "v0.2.4" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
